--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 .container-box{
     height: 90vh;
     width: 70%;
-    background-color: darkcyan;
+    background-color: #FFF;
     margin:50px auto;
     display: grid;
     gap: 32px;
